...

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/playerView_recipe_step"
            android:layout_width="match_parent"
            android:layout_height="@dimen/playerView_recipe_step_height"
            android:padding="@dimen/playerView_recipe_step_padding" />

        <TextView
            android:id="@+id/tv_recipe_step_description"
...
                android:gravity="start"
                android:text="@string/recipe_details_steps_section"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/text_18" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_recipe_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/rv_recipe_steps_margin_top"
                android:scrollbars="horizontal" />

        </LinearLayout>
...
